--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "highlight.js/styles/atom-one-dark.css";
 
 :root {
   --background: #ffffff;
@@ -19,8 +20,43 @@
   }
 }
 
+html {
+    scrollbar-gutter: stable;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.markdown p {
+    @apply mb-4 text-justify;
+}
+
+.markdown h2 {
+    @apply mb-1 text-xl font-bold text-justify;
+}
+
+.markdown pre {
+    @apply text-base mb-4 rounded shadow-sm overflow-auto;
+}
+
+.markdown code {
+    @apply text-base px-1 rounded shadow-sm;
+}
+
+.markdown p code {
+    background-color: rgb(40, 44, 52);
+    @apply text-white shadow-none;
+}
+
+.markdown .disclaimer {
+    @apply text-xs text-slate-500 dark:text-zinc-600 mt-2;
+}
+
+.markdown ul {
+    @apply list-disc list-inside mb-4 ml-6;
+}
+
+
